Removes Lombok from entities